# DDS-Data-model-Example

./: .gitignore  README.md
Alarms/: Alarm.xml  Alarm.xml.orig  Alarms data modeling example.docx  Alarms.rtisdproj  Alarms.rtisdproj~  Alarms.xml  Common.xml  Common.xml~  README.md  ~$arms data modeling example.docx
Alarms/Python/: Alarms.idl  Alarms.py  Alarms_program.py  Alarms_publisher.py  Alarms_subscriber.py  USER_QOS_PROFILES.xml
Alarms/Win_c++/src/: Alarms.cxx  Alarms.h  AlarmsPlugin.cxx  AlarmsPlugin.h  AlarmsSupport.h  Alarms_publisher.cxx  Alarms_subscriber.cxx  README_x64Win64VS2017.txt
Alarms/Win_c++/src/objs/x64Win64VS2017/: Alarms_publisher.ilk  Alarms_subscriber.ilk
Alarms/Win_c++/src/objs/x64Win64VS2017/Alarms_publisher.tlog/: Alarms_publisher.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Alarms/Win_c++/src/objs/x64Win64VS2017/Alarms_s.8E420232.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Alarms/Win_c++/xml/: USER_QOS_PROFILES.xml
Alarms/Win_c++11/src/: Alarms.cxx  Alarms.hpp  AlarmsPlugin.cxx  AlarmsPlugin.hpp  Alarms_publisher.cxx
Alarms/c++/: README.md
Alarms/c++/src/: Alarms.h  Alarms_publisher.cxx  CMakeLists.txt
Alarms/c++/src/objs/x64Win64VS2017/Alarms_publisher.tlog/: Alarms_publisher.lastbuildstate  CL.command.1.tlog
Alarms/c++/src/objs/x64Win64VS2017/Alarms_s.8E420232.tlog/: CL.command.1.tlog  link.read.1.tlog
Alarms/c++11/: README.md
Alarms/c++11/idl/: Alarms.idl
Alarms/c++11/src/: AlarmsPlugin.hpp  Alarms_subscriber.cxx  CMakeLists.txt  README_x64Win64VS2017.txt
Alarms/linux_c++/: README_x64Linux4gcc7.3.0.txt  makefile_Alarms_x64Linux4gcc7.3.0
Alarms/linux_c++/src/: Alarms.h  AlarmsSupport.h  Alarms_publisher.cxx
Alarms/linux_c++11/: Alarms.cxx  Alarms.xml  Alarms_subscriber.cxx  README_x64Linux4gcc7.3.0.txt  USER_QOS_PROFILES.xml
Alarms/linux_c++11/idl/: Alarms.idl
Alarms/linux_c++11/src/: AlarmsPlugin.h  AlarmsSupport.cxx  Alarms_publisher.cxx  makefile_Alarms_x64Linux4gcc7.3.0
CmdRspExample/: CommandProject.rtisdproj  CommandProject.xml  README.md
CommandResponse/: CommandProject.rtisdproj  CommandProject.xml  DDS_Entities_WrapperClasses.pages  README.md  ~$CommandResponse.pptx
CommandResponse/c++/: CommandResp.h  README.md  runController  runControllerVSC  runDevice  runDeviceVSC
CommandResponse/c++/src/: #topics_T.h#  CMakeLists.txt  CommandResp.cxx  CommandResp.h  CommandRespPlugin.cxx  CommandRespPlugin.h  CommandRespSupport.cxx  CommandRespSupport.h  CommandResp_publisher.cxx  CommandResp_subscriber.cxx  README.md  README_x64Darwin17clang9.0.txt  controller.cxx  ddsEntities.cxx  ddsEntities.h  device.cxx  topics.cxx  topics.h  topics_T.h
CommandResponse/c++/src/src/: CMakeLists.txt  CommandResp.h  application.h  controller.cxx  ddsEntities.h  topics.cxx  topics.h
CommandResponse/c++11/: CMakeLists.txt  CommandResp.hpp  README.md  controller.cxx  ddsEntities.cxx  ddsEntities.hpp  device.cxx  topics.cxx  topics.hpp
CommandResponse/model/: CommandProject.rtisdproj  CommandProject.xml  CommandResp.idl
CommandResponse/python/: README.md  application.py  constants.py  controller.py  ddsEntities.py  device.py  topics.py  topicsH.py
LargeData/: LargeData.idl  LargeData.rtisdproj  LargeData.xml
LargeData/model/: LargeData.idl  LargeData.rtisdproj  LargeData.xml
LargeData/test/raw_src/: write_raw_img.cpp
LargeData/test/stb_src/: CMakeLists.txt  write_img.cpp
LargeDataType/: LargeData.rtisdproj  README.md
Sensors/: Common.xml  README.md  SensorInfo.xml  SensorProject.rtisdproj  SensorQos.xml  Sensors.xml
Sensors/c++/: README.md
Sensors/c++/idl/: Common.idl  Sensor.idl  SensorInfo.idl
Sensors/c++/src/: CMakeLists.txt  Common.cxx  Common.h  CommonPlugin.cxx  CommonPlugin.h  CommonSupport.cxx  CommonSupport.h  Sensor.cxx  Sensor.h  SensorPlugin.cxx  SensorPlugin.h  SensorSupport.cxx  SensorSupport.h  Sensor_publisher.cxx  Sensor_subscriber.cxx  application.h  sensor_publisher.cxx  sensor_subscriber.cxx
Sensors/c++/xml/: SensorQoS.xml
Sensors/c++11/: CMakeLists.txt  README.md  publisher.cxx  sensor_publisher.cxx  sensor_subscriber.cxx  subscriber.cxx
Sensors/model/: README.md  SensorInfo.xml  SensorProject.rtisdproj
Sensors/python/: README.md  README.txt  SensorInfo.py  SensorInfo_publisher.py  SensorInfo_subscriber.py  publisher.py  subscriber.py
Sensors/python_api/: README.md  SensorInfo.py  SensorInfo_program.py  SensorInfo_publisher.py  SensorInfo_subscriber.py  USER_QOS_PROFILES.xml
Sensors/python_connector/: subscriber.py
pulse_sysdesigner_ex/: MedicalDemo.rtisdproj  MedicalDemo.xml  MedicalDemo.xml.aws  MedicalDemo.xml.loc  README.md
